crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_multiple_missing_positionals.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: missing required argument
   ╭─[ <suggestion>:1:8 ]
   │
 1 │ create <resource-type>
   │        ───────┬───────  
   │               ╰───────── Resource type (e.g., user, project)
───╯
